--- a/ui/assets/styles/blue-classic-theme.css
+++ b/ui/assets/styles/blue-classic-theme.css
@@ -1233,7 +1233,7 @@ footer {
     .form-grid .collapsible > label:has(.btn-icon:not([hidden]):not([style*="display: none"])),
     .form-grid .fields-group > label:has(.btn-icon:not([hidden]):not([style*="display: none"])) {
       position: relative;
-      margin-right: -2px;
+      right: -2px;
       padding-right: 23px; }
       .form-grid > label:has(.btn-icon:not([hidden]):not([style*="display: none"])) .btn-icon,
       .form-grid .collapsible > label:has(.btn-icon:not([hidden]):not([style*="display: none"])) .btn-icon,
